[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/eEraDua.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://bg/02.png" type="Texture" id=2]
[ext_resource path="res://scrpts/PartidasGuardadas.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=3]
size = 35
outline_size = 2
outline_color = Color( 0.796078, 0.423529, 0.0196078, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 45
outline_size = 3
outline_color = Color( 0.109804, 0.243137, 0.0156863, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 35
outline_size = 3
outline_color = Color( 0.12549, 0.0196078, 0.0196078, 1 )
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="02" type="Sprite" parent="."]
position = Vector2( 563, 301 )
scale = Vector2( 0.789769, 0.801333 )
texture = ExtResource( 2 )

[node name="btnRegresar" type="Button" parent="."]
margin_left = 300.0
margin_top = 508.0
margin_right = 732.0
margin_bottom = 565.0
rect_pivot_offset = Vector2( 216, 29 )
custom_colors/font_color = Color( 0.854492, 0, 0.215292, 1 )
custom_fonts/font = SubResource( 3 )
text = "REGRESAR"
flat = true

[node name="btnJugar" type="Button" parent="."]
margin_left = 298.0
margin_top = 455.0
margin_right = 730.0
margin_bottom = 512.0
rect_pivot_offset = Vector2( 216, 29 )
custom_colors/font_color = Color( 0.854492, 0, 0.215292, 1 )
custom_fonts/font = SubResource( 3 )
text = "JUGAR"
flat = true

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.129
anchor_right = 0.5
anchor_bottom = 0.129
margin_left = -177.0
margin_top = -1.4
margin_right = 183.0
margin_bottom = 44.6
custom_colors/font_color = Color( 0.92549, 0.819608, 0.12549, 1 )
custom_fonts/font = SubResource( 1 )
text = "Cargar Partida"
align = 1

[node name="cmbUsuarios" type="OptionButton" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 287.0
margin_top = -156.0
margin_right = -287.0
margin_bottom = -114.0
focus_mode = 0
custom_colors/font_color = Color( 0.843137, 0.231373, 0.0431373, 1 )
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
flat = true
align = 1
expand_icon = true

[connection signal="pressed" from="btnRegresar" to="." method="_on_btnRegresar_pressed"]
[connection signal="pressed" from="btnJugar" to="." method="_on_btnJugar_pressed"]
[connection signal="item_selected" from="cmbUsuarios" to="." method="_on_cmbUsuarios_item_selected"]
[connection signal="pressed" from="cmbUsuarios" to="." method="_on_cmbUsuarios_pressed"]
